--- a/all_collections/_posts/2022-06-29-welcome.md
+++ b/all_collections/_posts/2022-06-29-welcome.md
@@ -24,5 +24,5 @@ Now according to the official documentation you only have to run one command and
 
 `bash -c "$(curl -fsSL https://gef.blah.cat/sh)"`
 
-Wait till the installation is done and run gdb to check if gef is properly.
+Wait till the installation is done and run gdb to check if gef is working properly.
 
